--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
 
 
-        <a href="https://info.autovacunas.com/" class="button">CONTINUE</a>
+        <a href="https://koltushi.org/who-insurance-pays-for-surrogate-pregnancy/" class="button">CONTINUE</a>
     </div>
 
     <!-- Modal -->
